--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -1,8 +1,8 @@
 name: Create Map
 on:
   push:
-  schedule:
-    - cron: '0 2 * * 6'
+#  schedule:
+#    - cron: '0 2 * * 6'
 jobs:
   create:
     runs-on: ubuntu-latest
