--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    strategy:
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
