--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -1,6 +1,8 @@
 name: Create Map
 on:
   push:
+    branches:
+      - 'main'
   schedule:
     - cron: '0 1 * * 0'
 jobs:
@@ -12,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '^3.9'
+          python-version: '3.11.5'
           cache: 'pipenv'
       - name: Install pipenv
         run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
