--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -15,11 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10.13'
-      - name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-      - name: create
-        run: pipenv install && pipenv run python main.py
+          python-version: '3.12.2'
+          cache: 'pipenv'
+      - name: Install dependencies
+        run: pip install --no-cache-dir -r requirements.lock -r requirements-dev.lock
+      - name: Create map
+        run: python main.py
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
           TOM_TOM_TOKEN: ${{ secrets.TOM_TOM_TOKEN }}
